fix: starrate with proper size on mobile devices

--- a/src/components/common/StarRate/StarRate.scss
+++ b/src/components/common/StarRate/StarRate.scss
@@ -5,3 +5,9 @@
   border-radius: 12px;
   color: #ffbb00;
 }
+
+@media (max-width: 1200px) {
+  .StarRate {
+    font-size: 12px;
+  }
+}
